<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image_in_profile"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/liverpool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username_profile_in_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_in_profile" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_profile"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:icon="@drawable/profile"
        app:iconPadding="5dp"
        app:iconSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_profile_in_profile" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon_email"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_profile" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email_in_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/icon_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_email"
        app:layout_constraintTop_toTopOf="@id/icon_email" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon_token"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_in_profile" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/token_in_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/token"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/icon_token"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_token"
        app:layout_constraintTop_toTopOf="@id/icon_token" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout_in_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/token_in_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>