<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.profileFragment.EditProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ligue_1_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_changes_image_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Image"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/username_profile"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <LinearLayout
        android:id="@+id/btn_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_changes_image_profile">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_work"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go" />

        <Button
            android:id="@+id/see_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_file"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_linear_layout" />



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/itl_username_in_edit_profile"
        app:layout_constraintEnd_toEndOf="@+id/itl_username_in_edit_profile"
        app:layout_constraintStart_toStartOf="@+id/itl_username_in_edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/username_profile"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itl_username_in_edit_profile"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="@id/title_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_username_in_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/itl_email_in_edit_profile"
        app:layout_constraintEnd_toEndOf="@+id/itl_username_in_edit_profile"
        app:layout_constraintStart_toStartOf="@+id/itl_username_in_edit_profile"
        app:layout_constraintTop_toTopOf="@id/itl_username_in_edit_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itl_email_in_edit_profile"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/title_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_in_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/itl_password_in_edit_profile"
        app:layout_constraintEnd_toEndOf="@+id/itl_email_in_edit_profile"
        app:layout_constraintStart_toStartOf="@+id/itl_email_in_edit_profile"
        app:layout_constraintTop_toTopOf="@id/itl_email_in_edit_profile" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itl_password_in_edit_profile"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="@id/btn_save_profile"
        app:layout_constraintEnd_toEndOf="@+id/title_password"
        app:layout_constraintStart_toStartOf="@+id/title_password"
        app:layout_constraintTop_toTopOf="@id/title_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password__in_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_profile"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/itl_password_in_edit_profile"
        app:layout_constraintStart_toStartOf="@+id/itl_password_in_edit_profile"
        app:layout_constraintTop_toTopOf="@id/itl_password_in_edit_profile"
        app:layout_constraintVertical_bias="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>