<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:backgroundTint="#1D1D27"
    app:cardCornerRadius="0dp"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_view_movie"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp"
        android:paddingBottom="12dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#31313A"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_text_movie"
                android:layout_width="match_parent"
                android:layout_height="85dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title_movie"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/release_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.4" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="@id/vote_average"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/title_movie"
                    app:layout_constraintTop_toTopOf="@id/title_movie"
                    app:layout_constraintVertical_bias="0.55" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vote_average"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_average"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/release_date"
                    app:layout_constraintStart_toStartOf="@+id/release_date"
                    app:layout_constraintTop_toTopOf="@id/release_date"
                    app:layout_constraintVertical_bias="0.6" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="100dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <Space
            android:id="@+id/space"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="@id/card_view_movie"
            app:layout_constraintEnd_toEndOf="@id/card_view_movie"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="@id/card_view_movie"
            app:layout_constraintTop_toTopOf="@id/card_view_movie"
            app:layout_constraintVertical_bias="0.98" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_movie"
            android:layout_width="75dp"
            android:layout_height="110dp"
            android:elevation="2dp"
            android:src="@drawable/liverpool"
            app:layout_constraintBottom_toTopOf="@id/space"
            app:layout_constraintStart_toEndOf="@id/space"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundedImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
